[package]
name = "luster"
version = "0.1.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT OR CC0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = "2.33"
gc-arena = "0.2"
gc-sequence = "0.2"
num-traits = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
rustc-hash = "1.1"
rustyline = "8.0"
